apps/base/audiobookshelf/audiobookshelf-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://audiobookshelf.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Audiobookshelf"
    gethomepage.dev/description: "Self-hosted audiobook and podcast server"
    gethomepage.dev/app: audiobookshelf
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/audiobookshelf.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`audiobookshelf.lab.mainertoo.com`)
      kind: Rule
      # middlewares:
      #   - name: authentik-sso
      #     namespace: traefik-system
      services:
        - name: audiobookshelf
          port: 80
  tls: {}
